packages/dart_piper_tts/lib/src/ffi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_piper_tts/src/ffi.g.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  FFIInitResponse Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64 port)>>,
  )
>()
external FFIInitResponse init(
  ffi.Pointer<ffi.Char> data_dir,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64 port)>>
  completion_cb,
);

@ffi.Native<
  FFICreateInstanceResponse Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external FFICreateInstanceResponse create_instance(
  ffi.Pointer<ffi.Char> model_path,
  ffi.Pointer<ffi.Char> config_path,
);

@ffi.Native<
  FFISpeakResponse Function(ffi.Int32, ffi.Pointer<ffi.Char>, ffi.Int64)
>()
external FFISpeakResponse speak(int fd, ffi.Pointer<ffi.Char> text, int port);

@ffi.Native<FFIPauseResponse Function(ffi.Int32)>()
external FFIPauseResponse pause(int fd);

@ffi.Native<FFIResumeResponse Function(ffi.Int32)>()
external FFIResumeResponse resume(int fd);

@ffi.Native<FFIStopResponse Function(ffi.Int32)>()
external FFIStopResponse stop(int fd);

final class FFIInitResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Char> error_message;
}

final class FFICreateInstanceResponse extends ffi.Struct {
  @ffi.Int32()
  external int fd;

  external ffi.Pointer<ffi.Char> error_message;
}

final class FFISpeakResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Char> error_message;
}

final class FFIPauseResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Char> error_message;
}

final class FFIResumeResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Char> error_message;
}

final class FFIStopResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Char> error_message;
}
